--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -287,7 +287,7 @@ jobs:
           path: ${{ env.GITOPS_BIN_PATH }}
       - name: chmod
         run: |
-          sudo chmod +x ${{ env.GITOPS_BIN_PATH }}
+          sudo chmod 755 ${{ env.GITOPS_BIN_PATH }}
           ls -la ${{ env.GITOPS_BIN_PATH }}
       - name: Setup selenium server
         if: ${{ runner.os == 'Linux' }}
