--- a/.github/workflows/gitops-binary.yaml
+++ b/.github/workflows/gitops-binary.yaml
@@ -23,10 +23,11 @@ jobs:
           # curl -LO https://github.com/weaveworks/weave-gitops/releases/download/v0.5.0-rc2/gitops-${{ inputs.os-name }}-x86_64.tar.gz
           # tar -xf gitops-${{ inputs.os-name }}-x86_64.tar.gz
           # mv gitops ${{ inputs.path }}
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v2
         with:
           name: gitops
           path: gitops
+          retention-days: 1
 
   build-a-commit:
     if: inputs.ref != 'main'
@@ -46,7 +47,8 @@ jobs:
       - name: build
         run: |
           make gitops
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v2
         with:
           name: gitops
           path: bin/gitops
+          retention-days: 1
