--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -281,17 +281,17 @@ jobs:
           wget https://github.com/yitsushi/totp-cli/releases/download/v1.1.17/totp-cli-v1.1.17-${{ inputs.os-name }}-amd64.tar.gz
           tar -xf totp-cli-v1.1.17-${{ inputs.os-name }}-amd64.tar.gz
           mv ./totp-cli /usr/local/bin
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v2
         with:
           name: gitops
-          path: ${{ env.GITOPS_BIN_PATH }}
+          path: /tmp/gitops
       - name: chmod
         run: |
-          sudo chmod a+x ${{ env.GITOPS_BIN_PATH }}
+          chmod +x /tmp/gitops
+          ls -la /tmp/gitops
+          sudo mv /tmp/gitops ${{ env.GITOPS_BIN_PATH }}
           ls -la ${{ env.GITOPS_BIN_PATH }}
-          sudo ${{ env.GITOPS_BIN_PATH }} version
-          sudo gitops version
-          gitops version
+          ls -laR /usr/local/bin
       - name: Setup selenium server
         if: ${{ runner.os == 'Linux' }}
         run: |
