Fixing building gitops binary in workflows

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -79,8 +79,14 @@ jobs:
             ${{ env.ARTEFACTS_BASE_DIR }}
           retention-days: 7
 
+  gitops-binary:
+    uses: ./.github/workflows/gitops-binary.yaml
+    with:
+      runs-on: ubuntu-latest
+      ref: 931b52e59deec59e61e0f2ed34690571b23079a3
+  
   acceptance-tests-gitlab:
-    needs: [build, coverage]
+    needs: [build, coverage, gitops-binary]
     uses: ./.github/workflows/acceptance-test.yaml
     with:
       runs-on: ubuntu-latest
@@ -108,7 +114,7 @@ jobs:
       WGE_GITLAB_CLIENT_SECRET: ${{ secrets.WGE_SAS_GITLAB_CLIENT_SECRET }}
 
   acceptance-tests-gitlab-on-prem:
-    needs: [build, coverage]
+    needs: [build, coverage, gitops-binary]
     uses: ./.github/workflows/acceptance-test.yaml
     with:
       runs-on: ubuntu-latest
