--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -281,18 +281,17 @@ jobs:
           wget https://github.com/yitsushi/totp-cli/releases/download/v1.1.17/totp-cli-v1.1.17-${{ inputs.os-name }}-amd64.tar.gz
           tar -xf totp-cli-v1.1.17-${{ inputs.os-name }}-amd64.tar.gz
           mv ./totp-cli /usr/local/bin
-      - uses: actions/download-artifact@v2
+      - name: Download gitops binary
+        uses: actions/download-artifact@v2
         with:
           name: gitops
           path: /tmp
-      - name: chmod
+      - name: chmod gitops binary
         run: |
-          chmod +x /tmp/gitops
-          ls -la /tmp/gitops
-          sudo mv /tmp/gitops ${{ env.GITOPS_BIN_PATH }}
+          chmod +x /tmp/gitops-${{ inputs.runs-on }}
+          ls -la /tmp/gitops-${{ inputs.runs-on }}
+          sudo mv /tmp/gitops-${{ inputs.runs-on }} ${{ env.GITOPS_BIN_PATH }}
           ls -la ${{ env.GITOPS_BIN_PATH }}
-          ls -laR /usr/local/bin
-          echo $PATH
           gitops version
       - name: Setup selenium server
         if: ${{ runner.os == 'Linux' }}
