--- a/.github/workflows/gitops-binary.yaml
+++ b/.github/workflows/gitops-binary.yaml
@@ -8,30 +8,39 @@ on:
         default: "main"
         required: false
         type: string
+      runs-on:
+        description: "`macOS-latest` or `ubuntu-latest`"
+        required: false
+        default: "ubuntu-latest"
+        type: string
+      os-name:
+        description: "`linux` or `darwin`"
+        required: false
+        default: "linux"
+        type: string
 
 jobs:
   latest-main:
     if: inputs.ref == 'main'
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runs-on }}
     steps:
       - name: Download gitops binary from s3
         shell: bash
         run: |
-          wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-${{ inputs.runs-on }}        
-          mv gitops-${{ inputs.runs-on }} gitops
+          wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-${{ inputs.runs-on }}
 
           # curl -LO https://github.com/weaveworks/weave-gitops/releases/download/v0.5.0-rc2/gitops-${{ inputs.os-name }}-x86_64.tar.gz
           # tar -xf gitops-${{ inputs.os-name }}-x86_64.tar.gz
-          # mv gitops ${{ inputs.path }}
+          # mv gitops gitops-${{ inputs.runs-on }}
       - uses: actions/upload-artifact@v2
         with:
           name: gitops
-          path: gitops
+          path: gitops-${{ inputs.runs-on }}
           retention-days: 1
 
   build-a-commit:
     if: inputs.ref != 'main'
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runs-on }}
     steps:
       - name: Install Go
         uses: actions/setup-go@v2
@@ -47,8 +56,9 @@ jobs:
       - name: build
         run: |
           make gitops
+          mv bin/gitops bin/gitops-${{ inputs.runs-on }}
       - uses: actions/upload-artifact@v2
         with:
           name: gitops
-          path: bin/gitops
+          path: bin/gitops-${{ inputs.runs-on }}
           retention-days: 1
