--- a/charts/mccp/crds/capi.weave.works_weaveclusters.yaml
+++ b/charts/mccp/crds/capi.weave.works_weaveclusters.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
-  name: WeaveClusters.capi.weave.works
+  name: weaveclusters.capi.weave.works
 spec:
   group: capi.weave.works
   names:
