--- a/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
@@ -40,9 +40,16 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
   name: cluster-bootstrap-controller-manager-role
 rules:
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
 - apiGroups:
   - batch
   resources:
