--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -28,6 +28,10 @@ on:
         description: "Version of kubectl"
         required: true
         type: string
+      login_user_type:
+        description: "Login user type e.g. cluster-user or oidc"
+        required: true
+        type: string
       git-provider:
         description: "Git provider for running tests either on github or gitlab"
         required: true
@@ -70,6 +74,12 @@ on:
       BUILD_BOT_USER:
         description: "Build bot user name"
         required: true
+      WGE_CLUSTER_ADMIN_PASSWORD_HASH:
+        description: "Cluster user admin password hash"
+        required: false
+      WGE_DEX_CLIENT_SECRET:
+        description: "client credential secret for OIDC (dex)"
+        required: false
       BUILD_BOT_PERSONAL_ACCESS_TOKEN:
         description: "Build obt personal access token"
         required: true
@@ -130,6 +140,11 @@ on:
 
 env:
   GO_CACHE_NAME: cache-go-modules
+  LOGIN_USER_TYPE: ${{ inputs.login_user_type }}
+  CLUSTER_ADMIN_PASSWORD_HASH: ${{ secrets.WGE_CLUSTER_ADMIN_PASSWORD_HASH }}
+  OIDC_ISSUER_URL: https://dex-01.wge.dev.weave.works
+  DEX_CLIENT_ID: weave-gitops-enterprise
+  DEX_CLIENT_SECRET: ${{ secrets.WGE_WGE_DEX_CLIENT_SECRET }}
   GIT_PROVIDER: ${{ inputs.git-provider }}
   GIT_PROVIDER_HOSTNAME: ${{ inputs.git-provider_hostname }}
   GITHUB_ORG: ${{ secrets.WGE_GITHUB_ORG }}
