--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -232,6 +232,7 @@ jobs:
       timeout-minutes: 60
       focus-or-skip: "-ginkgo.focus='@smoke'"
       kubectl-version: "v1.21.1"
+      login_user_type: "oidc"
       git-provider: github
       git-provider_hostname: github.com
       cluster_resource_set: true
@@ -242,6 +243,7 @@ jobs:
     secrets:
       BUILD_BOT_USER: wge-build-bot
       BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+      WGE_DEX_CLIENT_SECRET: ${{ secrets.WGE_WGE_DEX_CLIENT_SECRET }}
       WGE_GIT_PROVIDER_PRIVATE_KEY: ${{ secrets.WGE_GITHUB_PRIVATE_KEY }}
       WGE_GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
       WGE_GITHUB_ORG: wge-org-test
@@ -258,6 +260,7 @@ jobs:
       timeout-minutes: 60
       focus-or-skip: "-ginkgo.focus='@smoke'"
       kubectl-version: "v1.22.0"
+      login_user_type: "cluster-user"
       git-provider: gitlab
       git-provider_hostname: gitlab.com
       cluster_resource_set: true
@@ -266,8 +269,9 @@ jobs:
       database-type: sqlite
       artifacts-base-dir: "/tmp/smoke-test-gitlab"
     secrets:
-      BUILD_BOT_USER: wge-build-bot
-      BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+      BUILD_BOT_USER: wge-build-bot     
+      BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}      
+      WGE_CLUSTER_ADMIN_PASSWORD_HASH: "${{ secrets.WGE_CLUSTER_ADMIN_PASSWORD_HASH }}" 
       WGE_GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
       WGE_GIT_PROVIDER_PRIVATE_KEY: ${{ secrets.WGE_SAS_GITLAB_PRIVATE_KEY }}
       WGE_GITLAB_TOKEN: ${{ secrets.WGE_SAS_GITLAB_TOKEN }}
@@ -286,6 +290,7 @@ jobs:
       timeout-minutes: 60
       focus-or-skip: "-ginkgo.focus='@smoke'"
       kubectl-version: "v1.22.0"
+      login_user_type: "oidc"
       git-provider: gitlab
       git-provider_hostname: gitlab.git.dev.weave.works
       cluster_resource_set: true
@@ -296,6 +301,7 @@ jobs:
     secrets:
       BUILD_BOT_USER: wge-build-bot
       BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+      WGE_DEX_CLIENT_SECRET: ${{ secrets.WGE_WGE_DEX_CLIENT_SECRET }}
       WGE_GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
       WGE_GIT_PROVIDER_PRIVATE_KEY: ${{ secrets.WGE_ON_PREM_GITLAB_PRIVATE_KEY }}
       WGE_GITLAB_TOKEN: ${{ secrets.WGE_ON_PREM_GITLAB_TOKEN }}
@@ -320,6 +326,7 @@ jobs:
       timeout-minutes: 90
       focus-or-skip: "-ginkgo.skip='@upgrade|@smoke|@gce|@eks'"
       kubectl-version: "v1.21.1"
+      login_user_type: "oidc"
       git-provider: github
       git-provider_hostname: github.com
       cluster_resource_set: true
@@ -330,6 +337,7 @@ jobs:
     secrets:
       BUILD_BOT_USER: wge-build-bot
       BUILD_BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+      WGE_DEX_CLIENT_SECRET: ${{ secrets.WGE_WGE_DEX_CLIENT_SECRET }}
       WGE_GIT_PROVIDER_PRIVATE_KEY: ${{ secrets.WGE_GITHUB_PRIVATE_KEY }}
       WGE_GITHUB_TOKEN: ${{ secrets.WGE_GITHUB_TOKEN }}
       WGE_GITHUB_ORG: wge-org-test
