--- a/charts/mccp/templates/clusters-service/clusters_service_secrets_rb.yaml
+++ b/charts/mccp/templates/clusters-service/clusters_service_secrets_rb.yaml
@@ -1,3 +1,18 @@
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+    name: clusters-service-secrets-role
+    namespace: wego-system
+roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: ClusterRole
+    name: clusters-service-secrets-role
+subjects:
+    - kind: ServiceAccount
+      name: {{ include "mccp.serviceAccountName" . }}
+      namespace: {{ .Release.Namespace | quote }}
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
