--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -104,3 +104,29 @@ jobs:
       WGE_GITLAB_PASSWORD: ${{ secrets.WGE_ON_PREM_GITLAB_PASSWORD }}
       WGE_GITLAB_CLIENT_ID: ${{ secrets.WGE_ON_PREM_GITLAB_CLIENT_ID }}
       WGE_GITLAB_CLIENT_SECRET: ${{ secrets.WGE_ON_PREM_GITLAB_CLIENT_SECRET }}
+
+  snyk-monitor:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure git for private modules
+        run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17.x
+      - name: Setup snyk
+        uses: snyk/actions/setup@master
+      - name: Monitor dependencies & license problems with Snyk
+        # Throw an error if the error is "snyk couldn't run".
+        # Don't throw an error on "there are vulnerabilities", those
+        # are notified separately
+        run: |
+          exit_code=0
+          snyk monitor --all-projects --org=product-engineering-ly9 || exit_code=$?
+          if [ $exit_code -gt 1 ]; then
+            exit $exit_code
+          fi
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_API_TOKEN }}
