--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -365,3 +365,30 @@ jobs:
       WGE_GITHUB_USER: ${{ secrets.WGE_GITHUB_USER }}
       WGE_GITHUB_PASSWORD: ${{ secrets.WGE_GITHUB_PASSWORD }}
       WGE_GITHUB_MFA_KEY: ${{ secrets.WGE_GITHUB_MFA_KEY }}
+
+  snyk-checks:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure git for private modules
+        env:
+          GITHUB_BUILD_USERNAME: wge-build-bot
+          GITHUB_BUILD_TOKEN: ${{ secrets.BUILD_BOT_PERSONAL_ACCESS_TOKEN }}
+        run: git config --global url."https://${GITHUB_BUILD_USERNAME}:${GITHUB_BUILD_TOKEN}@github.com".insteadOf "https://github.com"
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18.x
+      - name: Setup snyk
+        uses: snyk/actions/setup@master
+      - name: Setup snyk prerequisites
+        run: |
+          npm install --global snyk-delta
+      - name: Look for new insecure dependencies or bad licenses
+        run: |
+          snyk test --org=product-engineering-ly9 --json --file=go.mod | snyk-delta
+          snyk test --org=product-engineering-ly9 --json --file=common/go.mod | snyk-delta
+          snyk test --org=product-engineering-ly9 --json --file=ui-cra/yarn.lock | snyk-delta
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_API_TOKEN }}
