--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie-player": "^1.3.3",
+    "react-query": "^3.34.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "~5.0.0",
     "react-toastify": "^8.0.2",
@@ -50,6 +51,7 @@
   "resolutions": {
     "**/react": "^17.0.2",
     "**/react-dom": "^17.0.2",
+    "**/react-query": "^3.34.7",
     "@weaveworks/weave-gitops/react-router-dom": "^5.2.0",
     "mini-css-extract-plugin": "~2.4.5"
   },
