--- a/test/utils/data/rbac-auth.yaml
+++ b/test/utils/data/rbac-auth.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: apps-reader
-  namespace: wego-system
+  namespace: flux-system
 rules:
   - apiGroups: ["wego.weave.works"]
     resources: ["apps"]
@@ -18,7 +18,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: profiles-reader
-  namespace: wego-system
+  namespace: flux-system
 rules:
   - apiGroups: ["source.toolkit.fluxcd.io"]
     resources: ["helmrepositories"]
@@ -29,7 +29,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: configmaps-reader
-  namespace: wego-system
+  namespace: flux-system
 rules:
   - apiGroups: [""]
     resources: ["configmaps"]
@@ -67,7 +67,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: read-profiles
-  namespace: wego-system
+  namespace: flux-system
 subjects:
 - kind: User
   name: "admin"
@@ -84,7 +84,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: read-apps
-  namespace: wego-system
+  namespace: flux-system
 subjects:
 - kind: User
   name: "admin"
@@ -101,7 +101,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: read-configmaps
-  namespace: wego-system
+  namespace: flux-system
 subjects:
 - kind: User
   name: admin
