--- a/test/utils/data/rbac-auth.yaml
+++ b/test/utils/data/rbac-auth.yaml
@@ -53,7 +53,7 @@ metadata:
   namespace: default
 subjects:
 - kind: User
-  name: "admin"
+  name: "wego-admin"
   apiGroup: rbac.authorization.k8s.io
 - kind: User
   name: "team-pesto@weave.works"
@@ -70,7 +70,7 @@ metadata:
   namespace: flux-system
 subjects:
 - kind: User
-  name: "admin"
+  name: "wego-admin"
   apiGroup: rbac.authorization.k8s.io
 - kind: User
   name: "team-pesto@weave.works"
@@ -87,7 +87,7 @@ metadata:
   namespace: flux-system
 subjects:
 - kind: User
-  name: "admin"
+  name: "wego-admin"
   apiGroup: rbac.authorization.k8s.io
 - kind: User
   name: "team-pesto@weave.works"
@@ -104,7 +104,7 @@ metadata:
   namespace: flux-system
 subjects:
 - kind: User
-  name: admin
+  name: wego-admin
   apiGroup: rbac.authorization.k8s.io
 - kind: User
   name: "team-pesto@weave.works"
@@ -158,7 +158,7 @@ metadata:
   name: read-identities
 subjects:
 - kind: User
-  name: "admin"
+  name: "wego-admin"
   apiGroup: rbac.authorization.k8s.io
 - kind: User
   name: "team-pesto@weave.works"
@@ -174,7 +174,7 @@ metadata:
   name: read-secrets
 subjects:
 - kind: User
-  name: "admin"
+  name: "wego-admin"
   apiGroup: rbac.authorization.k8s.io
 - kind: User
   name: "team-pesto@weave.works"
@@ -190,7 +190,7 @@ metadata:
   name: read-policies
 subjects:
 - kind: User
-  name: "admin"
+  name: "wego-admin"
   apiGroup: rbac.authorization.k8s.io
 - kind: User
   name: "team-pesto@weave.works"
@@ -206,7 +206,7 @@ metadata:
   name: write-apps
 subjects:
 - kind: User
-  name: admin
+  name: wego-admin
   apiGroup: rbac.authorization.k8s.io
 - kind: User
   name: "team-pesto@weave.works"
