Begin migrating from gitops over to flux
- As the base reconcilation system

--- a/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
+++ b/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
@@ -26,7 +26,7 @@ spec:
               "--namespace=wego-system",
               "--owner=$(GITOPS_REPO_OWNER)",
               "--repository=$(GITOPS_REPO_NAME)",
-              "--path=.weave-gitops/clusters/{{ .ObjectMeta.Name }}/system",
+              "--path=clusters/{{ .ObjectMeta.Name }}/system",
             ]
           envFrom:
             - secretRef:
