--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -75,7 +75,7 @@ jobs:
     uses: ./.github/workflows/gitops-binary.yaml
     with:
       runs-on: ubuntu-latest
-      ref: 931b52e59deec59e61e0f2ed34690571b23079a3
+      ref: main
   
   acceptance-tests-gitlab-on-prem:
     needs: [build, coverage, gitops-binary]
