--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -50,6 +50,7 @@
     "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "vite-plugin-svgr": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
   "resolutions": {
@@ -60,10 +61,9 @@
     "mini-css-extract-plugin": "~2.4.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -94,9 +94,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^13.5.2",
+    "@vitejs/plugin-react": "^1.3.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "vite": "^2.9.2"
   }
 }
