--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "@uiw/react-md-editor": "^3.12.1",
     "@weaveworks/weave-gitops": "0.7.0",
     "classnames": "^2.3.1",
     "d3-scale": "4.0.0",
