Adds some default user-roles to the helm-chart
- Makes it a bit easier for people to get started
- ClusterRoles for now
- allow them to be disabled in values.yaml

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -77,6 +77,10 @@ tls:
   # if no tls secret is specified then we generate it in-mem in the server
   secretName: ""
 
+rbac:
+  userRoles:
+    create: true
+
 service:
   type: ClusterIP
   ports:
