feat: Add cluster-controller chart as a dependency

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -102,3 +102,6 @@ service:
   loadBalancerSourceRanges: []
   externalTrafficPolicy: ""
   healthCheckNodePort: 0
+
+cluster-controller:
+  enabled: false
